closing streams in finally block
git-svn-id: https://svn.apache.org/repos/asf/incubator/lenya/trunk@43230 13f79535-47bb-0310-9956-ffa450edef68